# bpf-exec

./: .gitignore  CMakeLists.txt  Makefile  README.md  buildrequirements.txt  mypy.ini  pyproject.toml  requirements.txt
agent/: CMakeLists.txt
agent/core/: CMakeLists.txt  config.c  networking.c
agent/include/: agent.h  common.h  config.h  networking.h
agent/src/: CMakeLists.txt  agent.c  main.c
c2/: __main__.py  c2.py  c2_cmd.py  parse.py  view.py
